Bug 513754 - KMyMoney Balance Chart Plot Has Inconsistent Credit Limit Line Display
Summary: KMyMoney Balance Chart Plot Has Inconsistent Credit Limit Line Display
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: 5.2.1
Platform: Other All
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-23 20:24 UTC by pc
Modified: 2025-12-24 15:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments
screentshots etc showing inconsistent behaviour (138.33 KB, application/pdf)
2025-12-23 20:24 UTC, pc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pc 2025-12-23 20:24:31 UTC
Created attachment 187916 [details]
screentshots etc showing inconsistent behaviour

SUMMARY
Thank-you for the fix to have the credit card limit balance chart plot issue reported in KDE Bug 513187. As reported in that bug the original issue has been resolved. However, there is still some minor inconsistent behaviour. I stress the issue is minor, but I believe it is inconsistent behaviour.
If there is not a “recent” entry in the account ledger the balance chart plot does not show the account balance limit line. 
The behaviour can be shown in a simple account setup, the details of which are shown as screenshots in the pdf file I will attach.

STEPS TO REPRODUCE
1. Have a credit card account with an account credit limit limit set.
2. Do not have any "recent" account entries.
3. Show the plot from ledger account view using the "Show balance chart" button

OBSERVED RESULT
The balance chart plot does not show the account balance limit line.

EXPECTED RESULT
The balance chart plot should show the account balance limit line.

SOFTWARE/OS VERSIONS
Windows 11
Ubuntu 24.04

ADDITIONAL INFORMATION
More details (screenshots etc) in the attached pdf.
Comment 1 Thomas Baumgart 2025-12-24 11:21:56 UTC
Git commit a99536f06d9758d08c932f7afd0f417953e35688 by Thomas Baumgart.
Committed on 24/12/2025 at 11:21.
Pushed by tbaumgart into branch 'master'.

Include limit lines in balance chart
FIXED-IN: 5.2.2

M  +39   -15   kmymoney/plugins/views/reports/kbalancechartdlg.cpp

https://invent.kde.org/office/kmymoney/-/commit/a99536f06d9758d08c932f7afd0f417953e35688
Comment 2 Thomas Baumgart 2025-12-24 15:29:09 UTC
Git commit f989e9d9ffe6057b511891a66f802ec63870a8c7 by Thomas Baumgart.
Committed on 24/12/2025 at 11:35.
Pushed by tbaumgart into branch '5.2'.

Include limit lines in balance chart
FIXED-IN: 5.2.2
(cherry picked from commit a99536f06d9758d08c932f7afd0f417953e35688)

M  +39   -15   kmymoney/plugins/views/reports/kbalancechartdlg.cpp

https://invent.kde.org/office/kmymoney/-/commit/f989e9d9ffe6057b511891a66f802ec63870a8c7