Include limit lines in balance chart

BUG: 513754
FIXED-IN: 5.2.2